# bolt7

./: AGENTS.md  README.md  flake.nix  ppad-bolt7.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT7.hs
lib/Lightning/Protocol/BOLT7/: CRC32C.hs  Codec.hs  Hash.hs  Messages.hs  Types.hs  Validate.hs
plans/: IMPL1.md  IMPL2.md
test/: Main.hs
