cabal-version:      3.0
name:               ppad-bolt7
version:            0.0.1
synopsis:           Routing gossip per BOLT #7
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Routing gossip protocol, per
  [BOLT #7](https://github.com/lightning/bolts/blob/master/07-routing-gossip.md).

source-repository head
  type:     git
  location: git.ppad.tech/bolt7.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Lightning.Protocol.BOLT7
      Lightning.Protocol.BOLT7.Codec
      Lightning.Protocol.BOLT7.CRC32C
      Lightning.Protocol.BOLT7.Hash
      Lightning.Protocol.BOLT7.Messages
      Lightning.Protocol.BOLT7.Types
      Lightning.Protocol.BOLT7.Validate
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , deepseq >= 1.4 && < 1.6
    , ppad-bolt1
    , ppad-sha256 >= 0.3 && < 0.4

test-suite bolt7-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-bolt1
    , ppad-bolt7
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark bolt7-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-bolt1
    , ppad-bolt7

benchmark bolt7-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-bolt1
    , ppad-bolt7
    , weigh
